tests/ui/attr_unknown_arg.stderr
error: unsupported dyn_shim argument, expected `skip` or `panic`
 --> tests/ui/attr_unknown_arg.rs:7:16
  |
7 |     #[dyn_shim(skpi)]
  |                ^^^^
